<resources>
    <string name="app_name">Revoir</string>
    <string name="enter_the_otp_below">Enter the OTP below:</string>
    <string name="hint_hash">#</string>
    <string name="otp_prompt">A 4-digit OTP has been sent to your mobile number:</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="loading">Please wait while we are loading.</string>
    <string name="loggingMessage">Logging in…</string>
    <string name="navigation_drawer_open">drawer open</string>
    <string name="navigation_drawer_close">drawer close</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sign_in_qr">Sign In (QR Code)</string>
    <string name="sign_out_qr">Sign Out (QR Code)</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="current_status_title">Your current status is:</string>
    <string name="home">Home</string>
    <string name="show_qr_code">Show QR Code</string>
    <string name="visitor_sms_sign_in">Visitor/SMS Sign In</string>
    <string name="visit_history">Visit History</string>
    <string name="show_visit_card">Show Visit Card</string>
    <string name="parking_ticket">Parking Ticket</string>
    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>
    <string name="left_thumb">Left\nThumb</string>
    <string name="right_thumb">Right\nThumb</string>
    <string name="right_index">Right\nIndex</string>
    <string name="left_index">Left\nIndex</string>
    <string name="login_prompt">Login options:\n1. Scan the QR Code above using the Employee app on your phone.\n2. Select the finger below and scan your finger in the sensor.</string>
    <string name="purpose_hint">Purpose</string>
    <string name="visit_accepted_security">Visit has been accepted for:</string>
    <string name="visit_rejected_security">Visit has been rejected for:</string>
    <string name="unknown_value">UNKNOWN</string>
    <string name="date_label_text">Date:</string>
    <string name="nothing_to_show">Nothing to show.</string>
    <string name="update_msg">Kindly Update the app to continue.</string>
    <string name="book_a_meeting_room">Book a meeting Room</string>
    <string name="meeting_image">Meeting Image</string>
    <string name="select_the_meeting_date">Select the meeting date</string>
    <string name="number_of_people">Number of People</string>
    <string name="search_for_slots">Search for Slots</string>
    <string name="book_meeting">Book Meeting Room.</string>
    <string name="slot_not_available">No Slots Available on this date.</string>
    <string name="_4_people_or_less">4 People or less</string>
    <string name="more_than_4_people">More than 4 people</string>
    <string name="submit_meeting">Submit</string>
    <string name="dash"> - </string>
    <string name="book">Book</string>
    <string name="no_slots_available">No Slots Available.</string>
</resources>
