<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:padding="8dp"
    tools:context=".Activities.MeetingSlotActivity">

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/slotEmptyView"
        android:layout_width="0dp"
        android:layout_margin="8dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/no_slots_available"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@id/buttonLayout"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ListView
        android:id="@+id/slotList"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:layout_marginTop="16dp"
        android:padding="8dp"
        app:layout_constraintBottom_toTopOf="@id/buttonLayout"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/buttonLayout"
        style="?attr/buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">


        <android.support.v7.widget.AppCompatButton
            android:id="@+id/slotCancel"
            style="?attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cancel"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/bookRoom"
            app:layout_constraintTop_toBottomOf="@id/slotList" />

        <android.support.design.button.MaterialButton
            android:id="@+id/bookRoom"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/book"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/slotList" />

    </LinearLayout>
</android.support.constraint.ConstraintLayout>