<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/homeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.HomeFragment">

    <TextView
        android:id="@+id/currentStatusLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/current_status_title"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="32sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.pw.hyperxchange.visitormanagement.Objects.SquareImageView
        android:id="@+id/signInSignOutImage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginTop="16dp"
        android:tint="@android:color/darker_gray"
        android:layout_marginEnd="64dp"
        android:src="@drawable/ic_cancel"
        app:layout_constraintTop_toBottomOf="@id/currentStatusLabel" />

    <TextView
        android:id="@+id/currentStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/unknown_value"
        android:textColor="@android:color/darker_gray"
        android:textSize="20sp"
        android:textStyle="bold|italic"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/signInSignOutImage" />

    <TextView
        android:id="@+id/lastStatusDateLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/date_label_text"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="32sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/currentStatus" />

    <TextView
        android:id="@+id/lastStatusDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/unknown_value"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lastStatusDateLabel"
        tools:text="16-10-2019" />
</android.support.constraint.ConstraintLayout>