<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp"
    tools:context=".Activities.ChooseMeetingRoomActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.constraint.ConstraintLayout
            android:id="@+id/radioLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioGroup
                android:id="@+id/meetingRadioGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:gravity="center_horizontal"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent">


                <RadioButton
                    android:id="@+id/room3"
                    android:layout_width="300dp"
                    android:layout_height="150dp"
                    android:background="@drawable/github" />

                <RadioButton
                    android:id="@+id/room2"
                    android:layout_width="300dp"
                    android:layout_height="150dp"
                    android:background="@drawable/quora" />

                <RadioButton
                    android:id="@+id/room1"
                    android:layout_width="300dp"
                    android:layout_height="150dp"
                    android:background="@drawable/stackoverflow" />
            </RadioGroup>

            <LinearLayout
                android:id="@+id/dateLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/meetingRadioGroup">

                <android.support.v7.widget.AppCompatImageView
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:layout_marginStart="64dp"
                    android:src="@drawable/calendar_pic" />

                <android.support.v7.widget.AppCompatButton
                    android:id="@+id/meetingDate"
                    style="?attr/buttonBarButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="start|center_vertical"
                    android:text="@string/select_the_meeting_date"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/meetingRadioGroup" />
            </LinearLayout>

            <LinearLayout
                style="?attr/buttonBarStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="32dp"
                android:orientation="horizontal"
                android:padding="8dp"
                app:layout_constraintTop_toBottomOf="@id/dateLayout">

                <android.support.v7.widget.AppCompatButton
                    android:id="@+id/meetingCancel"
                    style="?attr/buttonBarButtonStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/cancel" />

                <android.support.design.button.MaterialButton
                    android:id="@+id/submitRoomButton"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/submit_meeting" />
            </LinearLayout>
        </android.support.constraint.ConstraintLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>